syntax = "proto3";

option java_multiple_file = true;
option java_package = "com.prerepa.accounts";
option java_outer_classname = "AccountProto";

package accounts;

service AccountsService {	
	rpc Login (UserRequest) returns (UserResponse) {}
	rpc Register (UserRegisterInfo) returns (RegisterResponse) {}
	rpc CaneIdCheck (CaneUserInformation) returns (CaneIdExists) {}
}

message UserRequest {
	string Username = 1;
	string Password = 2;
}

message UserResponse {
	string Name = 1;
	int32 Age = 2;
	string CaneModel = 3;
	string phoneNumber = 4;
	bool UserExists = 5;
}

message UserRegisterInfo {
	string email = 1;
	string username = 2;
	string password = 3;
}

message RegisterResponse {
	int32 status = 1;
}

message CaneUserInformation {
	string username = 1;
	string caneID = 2;
}

message CaneIdExists {
	bool caneExists = 1;
}
